--- a/chart.css
+++ b/chart.css
@@ -1,2 +1,52 @@
-{
+body {
+  font: times;
+  width:800px;
 }
+#stacked_bar_chart {
+  width:800px;
+  height:400px;
+}
+
+.disclaimer {
+  font-size:12px;
+  padding-top:20px;
+  width:800px;
+  padding-left:10px;
+}
+
+#state-form-intro {
+  padding-top:10px;
+  float:left;
+  padding-right:20px;
+  padding-left:10px;
+  margin-top:10px;
+  font-size:14px;
+}
+
+.pads {
+  padding-bottom:5px;
+}
+
+.descriptionText {
+  font-size:16px;
+  padding-left:10px;
+  margin-top:10px;
+  padding-bottom:20px;
+  border-bottom:1px dotted #000;
+}
+
+.hed {
+  margin-bottom:0px;
+  font-size:24px;
+}
+
+.state-form {
+  padding-top:18px;
+}
+
+
+
+
+
+
+
